force-app/main/default/objects/Price_List__c/Price_List__c.object-meta.xml
<CustomObject>
    <label>Price List</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>