force-app/main/default/objects/Price_List__c/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <formula>AND(  NOW()   &gt;  Effective_From__c ,  NOW()  &lt;  Effective_To__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>