force-app/main/default/objects/Price_List__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>List Price</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>