force-app/main/default/objects/Price_List__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month-Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>