force-app/main/default/objects/Price_List__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Month Year</label>
    <referenceTo>Month_Year__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>