force-app/main/default/objects/Price_List__c/listViews/All_Price_List.listView-meta.xml
<ListView>
    <fullName>All_Price_List</fullName>
    <columns>Latest__c</columns>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Market__c</columns>
    <columns>Supplier__c</columns>
    <columns>Type__c</columns>
    <columns>Size__c</columns>
    <columns>Term__c</columns>
    <columns>List_Price__c</columns>
    <columns>Currency_ISO_Code__c</columns>
    <columns>Is_Valid__c</columns>
    <columns>Month_Year__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>Gas-Small fixed</value>
    </filters>
    <label>All Price List</label>
</ListView>